fixed missing overflow for media query

--- a/assets/css/master.scss
+++ b/assets/css/master.scss
@@ -239,6 +239,7 @@ body {
     width: 90%;
     margin-right: auto;
     margin-left: auto;
+    overflow:auto; 
   }
 
   .sections-container .templates,
